Add album art endpoint
